--- a/TopPortLib/TopPortLib.csproj
+++ b/TopPortLib/TopPortLib.csproj
@@ -2,11 +2,11 @@
 
 	<PropertyGroup>
 		<TargetFrameworks>netstandard2.0;net9.0;net8.0</TargetFrameworks>
-		<Version>9.9.1</Version>
+		<Version>9.9.2</Version>
 		<Description>通讯口使用类库</Description>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageReleaseNotes>
-			新增 `isDisconnectedWhenZero` 参数，控制读取到字节数为0时的连接断开行为
+			构造函数移除了 `isDisconnectedWhenZero` 参数，并简化了数据读取逻辑
 		</PackageReleaseNotes>
 		<PackageId>CSoft.TopPortLib</PackageId>
 		<Authors>CSoft</Authors>
