--- a/Crow/Crow.csproj
+++ b/Crow/Crow.csproj
@@ -3,12 +3,12 @@
 	<PropertyGroup>
 		<TargetFrameworks>netstandard2.0;net9.0;net8.0</TargetFrameworks>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-		<Version>9.1.3</Version>
+		<Version>9.2.0</Version>
 		<Description>数据收发队列</Description>
 		<PackageId>CSoft.Crow</PackageId>
 		<Authors>CSoft</Authors>
 		<Company>CSoft</Company>
-		<PackageReleaseNotes>更新依赖</PackageReleaseNotes>
+		<PackageReleaseNotes>优化任务管理，提高资源使用效率</PackageReleaseNotes>
 		<PackageProjectUrl>https://github.com/caoyiliang/Communication</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/caoyiliang/Communication</RepositoryUrl>
 		<PackageIcon>logo.png</PackageIcon>
