更新项目版本和依赖项
- `Communication.Bluetooth.csproj`：版本从 `9.7.2` 更新到 `9.7.3`，依赖的 `InTheHand.Net.Bluetooth` 包版本从 `4.1.44` 更新到 `4.2.0`，发布说明更新为“更新依赖”。
- `Communication.csproj`：版本从 `9.6.2` 更新到 `9.7.0`，依赖的 `CSoft.Utils` 包版本从 `9.1.4` 更新到 `9.1.5`，`System.IO.Ports` 包版本从 `9.0.2` 更新到 `9.0.3`，发布说明更新为“简化连接状态检查和错误处理”。
- `Crow.csproj`：版本从 `9.2.0` 更新到 `9.2.1`，依赖的 `CSoft.Utils` 包版本从 `9.1.4` 更新到 `9.1.5`，`System.Threading.Channels` 包版本从 `9.0.2` 更新到 `9.0.3`，发布说明更新为“更新依赖”。
- `Parser.csproj`：版本从 `9.1.4` 更新到 `9.1.5`，依赖的 `CSoft.Utils` 包版本从 `9.1.4` 更新到 `9.1.5`，`System.Threading.Channels` 包版本从 `9.0.2` 更新到 `9.0.3`，发布说明更新为“更新依赖”。
- `TopPortLibIntTest.csproj`：`MSTest.TestAdapter` 和 `MSTest.TestFramework` 的版本从 `3.8.0` 更新到 `3.8.3`。
- `TopPortLib.csproj`：版本从 `9.10.0` 更新到 `9.10.1`，发布说明更新为“简化连接状态检查和错误处理”。

--- a/Communication.Bluetooth/Communication.Bluetooth.csproj
+++ b/Communication.Bluetooth/Communication.Bluetooth.csproj
@@ -7,12 +7,12 @@
 		<LangVersion>default</LangVersion>
 		<PackageId>CSoft.Communication.Bluetooth</PackageId>
 		<Title>通讯库蓝牙拓展</Title>
-		<Version>9.7.2</Version>
+		<Version>9.7.3</Version>
 		<Authors>CSoft</Authors>
 		<PackageIcon>logo.png</PackageIcon>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 		<RepositoryUrl>https://github.com/caoyiliang/Communication</RepositoryUrl>
-		<PackageReleaseNotes>构造函数移除了 `isDisconnectedWhenZero` 参数，并简化了数据读取逻辑</PackageReleaseNotes>
+		<PackageReleaseNotes>更新依赖</PackageReleaseNotes>
 		<PackageProjectUrl>https://github.com/caoyiliang/Communication</PackageProjectUrl>
 	</PropertyGroup>
 
@@ -24,7 +24,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="InTheHand.Net.Bluetooth" Version="4.1.44" />
+		<PackageReference Include="InTheHand.Net.Bluetooth" Version="4.2.0" />
 	</ItemGroup>
 
 	<ItemGroup>
