--- a/Communication/Communication.csproj
+++ b/Communication/Communication.csproj
@@ -3,10 +3,10 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net9.0;net8.0</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>9.6.2</Version>
+    <Version>9.7.0</Version>
     <Description>通讯物理口封装</Description>
     <PackageReleaseNotes>
-		构造函数移除了 `isDisconnectedWhenZero` 参数，并简化了数据读取逻辑
+		简化连接状态检查和错误处理
 	</PackageReleaseNotes>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageId>CSoft.Communication</PackageId>
@@ -23,8 +23,8 @@
 
   <ItemGroup>
     <PackageReference Include="CSoft.LogInterface" Version="9.0.0" />
-    <PackageReference Include="CSoft.Utils" Version="9.1.4" />
-    <PackageReference Include="System.IO.Ports" Version="9.0.2" />
+    <PackageReference Include="CSoft.Utils" Version="9.1.5" />
+    <PackageReference Include="System.IO.Ports" Version="9.0.3" />
   </ItemGroup>
 
   <ItemGroup>
