--- a/Crow/Crow.csproj
+++ b/Crow/Crow.csproj
@@ -3,12 +3,12 @@
 	<PropertyGroup>
 		<TargetFrameworks>netstandard2.0;net9.0;net8.0</TargetFrameworks>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-		<Version>9.2.0</Version>
+		<Version>9.2.1</Version>
 		<Description>数据收发队列</Description>
 		<PackageId>CSoft.Crow</PackageId>
 		<Authors>CSoft</Authors>
 		<Company>CSoft</Company>
-		<PackageReleaseNotes>优化任务管理，提高资源使用效率</PackageReleaseNotes>
+		<PackageReleaseNotes>更新依赖</PackageReleaseNotes>
 		<PackageProjectUrl>https://github.com/caoyiliang/Communication</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/caoyiliang/Communication</RepositoryUrl>
 		<PackageIcon>logo.png</PackageIcon>
@@ -26,8 +26,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="CSoft.Utils" Version="9.1.4" />
-		<PackageReference Include="System.Threading.Channels" Version="9.0.2" />
+		<PackageReference Include="CSoft.Utils" Version="9.1.5" />
+		<PackageReference Include="System.Threading.Channels" Version="9.0.3" />
 	</ItemGroup>
 
 </Project>
