--- a/TopPortLib/TopPortLib.csproj
+++ b/TopPortLib/TopPortLib.csproj
@@ -2,11 +2,11 @@
 
 	<PropertyGroup>
 		<TargetFrameworks>netstandard2.0;net9.0;net8.0</TargetFrameworks>
-		<Version>9.10.0</Version>
+		<Version>9.10.1</Version>
 		<Description>通讯口使用类库</Description>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageReleaseNotes>
-			优化任务管理，提高资源使用效率
+			简化连接状态检查和错误处理
 		</PackageReleaseNotes>
 		<PackageId>CSoft.TopPortLib</PackageId>
 		<Authors>CSoft</Authors>
