更新多个项目版本及依赖包
本次提交主要包括以下更改：
- 提升 `Communication.Bluetooth`、`Communication`、`Crow`、`Parser` 和 `TopPortLib` 的版本号，以反映最新功能和修复。
- 更新 `Communication.Bluetooth.csproj` 中 `InTheHand.Net.Bluetooth` 包版本至 `4.2.1`。
- 更新 `Communication.csproj` 中 `System.IO.Ports` 包版本至 `9.0.5`，并更新发布说明。
- 更新 `Crow.csproj` 和 `Parser.csproj` 中 `System.Threading.Channels` 包版本至 `9.0.5`。
- 更新 `TopPortLibIntTest.csproj` 中测试相关包版本，确保兼容性。
- 更新 `TopPortLib.csproj` 版本至 `9.11.0`，并更新发布说明。
- 优化 `SerialPort.cs` 中 `ReadDataAsync` 方法的实现逻辑，确保有效读取数据。

--- a/TopPortLib/TopPortLib.csproj
+++ b/TopPortLib/TopPortLib.csproj
@@ -2,11 +2,11 @@
 
 	<PropertyGroup>
 		<TargetFrameworks>netstandard2.0;net9.0;net8.0</TargetFrameworks>
-		<Version>9.10.2</Version>
+		<Version>9.11.0</Version>
 		<Description>通讯口使用类库</Description>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageReleaseNotes>
-			简化连接状态检查和错误处理
+			更新 串口读取方式
 		</PackageReleaseNotes>
 		<PackageId>CSoft.TopPortLib</PackageId>
 		<Authors>CSoft</Authors>
