--- a/Communication/Communication.csproj
+++ b/Communication/Communication.csproj
@@ -3,10 +3,10 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net9.0;net8.0</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>9.7.1</Version>
+    <Version>9.8.0</Version>
     <Description>通讯物理口封装</Description>
     <PackageReleaseNotes>
-		更新 UDP 发送逻辑
+		更新 串口读取方式
 	</PackageReleaseNotes>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageId>CSoft.Communication</PackageId>
@@ -24,7 +24,7 @@
   <ItemGroup>
     <PackageReference Include="CSoft.LogInterface" Version="9.0.0" />
     <PackageReference Include="CSoft.Utils" Version="9.1.6" />
-    <PackageReference Include="System.IO.Ports" Version="9.0.3" />
+    <PackageReference Include="System.IO.Ports" Version="9.0.5" />
   </ItemGroup>
 
   <ItemGroup>
