优化串口异步数据接收和版本更新
在 `SerialPort.cs` 中添加了 `_dataReceivedTcs` 字段及相关方法，支持异步数据接收，并重写了构造函数和 `Dispose` 方法以管理事件注册。更新了 `ReadDataAsync` 方法以正确处理数据到达。

在项目文件中，将 `Communication.csproj` 的版本更新至 `9.8.3`，`TopPortLib.csproj` 的版本更新至 `9.11.3`，并更新了发布说明，强调了串口读取方式的优化。同时，将测试项目中的 `MSTest` 相关依赖版本更新至 `3.9.1`。

--- a/Communication/Communication.csproj
+++ b/Communication/Communication.csproj
@@ -3,10 +3,10 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net9.0;net8.0</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>9.8.1</Version>
+    <Version>9.8.3</Version>
     <Description>通讯物理口封装</Description>
     <PackageReleaseNotes>
-		更新 串口读取方式
+		优化 串口读取方式
 	</PackageReleaseNotes>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageId>CSoft.Communication</PackageId>
