--- a/Parser/Parser.csproj
+++ b/Parser/Parser.csproj
@@ -7,7 +7,7 @@
 		<Version>9.2.1</Version>
 		<Authors>CSoft</Authors>
 		<PackageId>CSoft.Parser</PackageId>
-		<PackageReleaseNotes>开放头加长度解包时，头部开放修改</PackageReleaseNotes>
+		<PackageReleaseNotes>更新依赖</PackageReleaseNotes>
 		<PackageProjectUrl>https://github.com/caoyiliang/Communication</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/caoyiliang/Communication</RepositoryUrl>
 		<PackageIcon>logo.png</PackageIcon>
@@ -20,7 +20,7 @@
 	<ItemGroup>
 		<PackageReference Include="CSoft.LogInterface" Version="9.0.0" />
 		<PackageReference Include="CSoft.Utils" Version="9.1.6" />
-		<PackageReference Include="System.Threading.Channels" Version="9.0.5" />
+		<PackageReference Include="System.Threading.Channels" Version="9.0.6" />
 	</ItemGroup>
 
 	<ItemGroup>
