重新调整SerialPortTest测试项目的目录层次结构。

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,5 @@
 /TestDemo/Server/obj
 /SerialPortTest/bin
 /SerialPortTest/obj
+/TestDemo/SerialPortTest/bin/Debug/net8.0
+/TestDemo/SerialPortTest/obj
