--- a/Communication/Communication.csproj
+++ b/Communication/Communication.csproj
@@ -3,10 +3,10 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net9.0;net8.0</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>9.9.2</Version>
+    <Version>9.9.3</Version>
     <Description>通讯物理口封装</Description>
     <PackageReleaseNotes>
-		修复串口掉线重连问题
+		修复串口掉线重连问题,优化 SerialPort.cs 中的循环条件和异常处理
 	</PackageReleaseNotes>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageId>CSoft.Communication</PackageId>
