--- a/Communication/Communication.csproj
+++ b/Communication/Communication.csproj
@@ -3,10 +3,10 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net9.0;net8.0</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>9.9.3</Version>
+    <Version>9.10.1</Version>
     <Description>通讯物理口封装</Description>
     <PackageReleaseNotes>
-		修复串口掉线重连问题,优化 SerialPort.cs 中的循环条件和异常处理
+		更新依赖
 	</PackageReleaseNotes>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageId>CSoft.Communication</PackageId>
@@ -24,7 +24,7 @@
   <ItemGroup>
     <PackageReference Include="CSoft.LogInterface" Version="9.0.0" />
     <PackageReference Include="CSoft.Utils" Version="9.1.6" />
-    <PackageReference Include="System.IO.Ports" Version="9.0.6" />
+    <PackageReference Include="System.IO.Ports" Version="9.0.7" />
   </ItemGroup>
 
   <ItemGroup>
