--- a/Parser/Parser.csproj
+++ b/Parser/Parser.csproj
@@ -4,10 +4,10 @@
 		<TargetFrameworks>netstandard2.0;net9.0;net8.0</TargetFrameworks>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<Description>数据分帧解析器</Description>
-		<Version>9.2.3</Version>
+		<Version>9.3.1</Version>
 		<Authors>CSoft</Authors>
 		<PackageId>CSoft.Parser</PackageId>
-		<PackageReleaseNotes>头加长度分包优化</PackageReleaseNotes>
+		<PackageReleaseNotes>更新依赖</PackageReleaseNotes>
 		<PackageProjectUrl>https://github.com/caoyiliang/Communication</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/caoyiliang/Communication</RepositoryUrl>
 		<PackageIcon>logo.png</PackageIcon>
@@ -20,7 +20,7 @@
 	<ItemGroup>
 		<PackageReference Include="CSoft.LogInterface" Version="9.0.0" />
 		<PackageReference Include="CSoft.Utils" Version="9.1.6" />
-		<PackageReference Include="System.Threading.Channels" Version="9.0.6" />
+		<PackageReference Include="System.Threading.Channels" Version="9.0.7" />
 	</ItemGroup>
 
 	<ItemGroup>
