提升版本号并优化数据读取逻辑
更新多个项目的版本号至9.10.5和9.13.5。
在`Communication.Bluetooth.csproj`中，更新`PackageReleaseNotes`为“更新依赖”。
在`Communication.csproj`和`TopPortLib.csproj`中，`PackageReleaseNotes`更新为“简化读取逻辑，提高Dispose中健壮性”。
重构`SerialPort.cs`中的`ReadDataAsync`方法，增强对取消令牌的处理，优化数据读取逻辑。
在`Dispose`方法中，增加对`_dataReceivedTcs`任务状态的检查，确保在取消时不会引发异常。

--- a/TopPortLib/TopPortLib.csproj
+++ b/TopPortLib/TopPortLib.csproj
@@ -2,11 +2,11 @@
 
 	<PropertyGroup>
 		<TargetFrameworks>netstandard2.0;net9.0;net8.0</TargetFrameworks>
-		<Version>9.13.4</Version>
+		<Version>9.13.5</Version>
 		<Description>通讯口使用类库</Description>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageReleaseNotes>
-			更新依赖
+			简化读取逻辑，提高Dispose中健壮性
 		</PackageReleaseNotes>
 		<PackageId>CSoft.TopPortLib</PackageId>
 		<Authors>CSoft</Authors>
