简化串口类实现并更新版本号
在 `SerialPort.cs` 中，多个构造函数采用表达式体语法，替换 `SemaphoreSlim` 为 `AutoResetEvent`，并简化 `Initialize` 方法。

更新 `Communication.csproj` 版本号至 `9.11.2`，并修改发布说明。

在 `PortTest.cs` 中，将串口名称更改为 `"COM1"`。

更新 `TopPortLib.csproj` 版本号至 `9.15.6`，并修改发布说明。

--- a/TopPortLib/TopPortLib.csproj
+++ b/TopPortLib/TopPortLib.csproj
@@ -2,11 +2,11 @@
 
 	<PropertyGroup>
 		<TargetFrameworks>netstandard2.0;net9.0;net8.0</TargetFrameworks>
-		<Version>9.15.5</Version>
+		<Version>9.15.6</Version>
 		<Description>通讯口使用类库</Description>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageReleaseNotes>
-			调整麻雀接口
+			调整串口接收逻辑
 		</PackageReleaseNotes>
 		<PackageId>CSoft.TopPortLib</PackageId>
 		<Authors>CSoft</Authors>
