新增请求超时处理方法并更新版本号
在 `ISparrowPort.cs` 中新增 `RequestEnumerableWithTimeOutAsync` 方法，支持请求超时处理，并添加了相应的 XML 注释。
在 `SparrowPort.cs` 中实现该方法，包含请求处理、超时控制和结果返回逻辑。
更新 `TopPortLib.csproj` 的版本号至 `9.16.7`，并修改包的发布说明，说明新增了麻雀接口。同时确保 `README.md` 文件的打包设置正确。

--- a/TopPortLib/TopPortLib.csproj
+++ b/TopPortLib/TopPortLib.csproj
@@ -2,11 +2,11 @@
 
 	<PropertyGroup>
 		<TargetFrameworks>netstandard2.0;net9.0;net8.0</TargetFrameworks>
-		<Version>9.16.6</Version>
+		<Version>9.16.7</Version>
 		<Description>通讯口使用类库</Description>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageReleaseNotes>
-			更新依赖
+			麻雀新增接口
 		</PackageReleaseNotes>
 		<PackageId>CSoft.TopPortLib</PackageId>
 		<Authors>CSoft</Authors>
@@ -27,8 +27,8 @@
 			<PackagePath></PackagePath>
 		</None>
 		<None Include="..\README.md">
-		  <Pack>True</Pack>
-		  <PackagePath>\</PackagePath>
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
 		</None>
 	</ItemGroup>
 
