更新版本并增强异步请求处理逻辑
在 `Communication.Bluetooth.csproj` 中，将版本号更新至 `9.13.4`，发布说明更改为“麻雀RequestEnumerableWithTimeOutAsync增强”。

在 `SparrowPort.cs` 中，添加对 `System.Threading.Channels` 的引用，修改 `reqInfo` 以支持 `ResponseChannel`，实现通过通道异步接收响应。

在 `RequestEnumerableWithTimeOutAsync` 方法中，增加了使用 `Channel` 处理响应的逻辑，支持异步接收多个响应并在超时后取消操作。

在 `TopPortLib.csproj` 中，将版本号更新至 `9.16.9`，发布说明更新为“麻雀RequestEnumerableWithTimeOutAsync增强”。

--- a/Communication.Bluetooth/Communication.Bluetooth.csproj
+++ b/Communication.Bluetooth/Communication.Bluetooth.csproj
@@ -7,12 +7,12 @@
 		<LangVersion>default</LangVersion>
 		<PackageId>CSoft.Communication.Bluetooth</PackageId>
 		<Title>通讯库蓝牙拓展</Title>
-		<Version>9.13.3</Version>
+		<Version>9.13.4</Version>
 		<Authors>CSoft</Authors>
 		<PackageIcon>logo.png</PackageIcon>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 		<RepositoryUrl>https://github.com/caoyiliang/Communication</RepositoryUrl>
-		<PackageReleaseNotes>更新依赖</PackageReleaseNotes>
+		<PackageReleaseNotes>麻雀RequestEnumerableWithTimeOutAsync增强</PackageReleaseNotes>
 		<PackageProjectUrl>https://github.com/caoyiliang/Communication</PackageProjectUrl>
 	</PropertyGroup>
 
