--- a/TopPortLib/TopPortLib.csproj
+++ b/TopPortLib/TopPortLib.csproj
@@ -2,11 +2,11 @@
 
 	<PropertyGroup>
 		<TargetFrameworks>netstandard2.0;net9.0;net8.0</TargetFrameworks>
-		<Version>9.16.8</Version>
+		<Version>9.16.9</Version>
 		<Description>通讯口使用类库</Description>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageReleaseNotes>
-			修复头长度解析器没有头的情况
+			麻雀RequestEnumerableWithTimeOutAsync增强
 		</PackageReleaseNotes>
 		<PackageId>CSoft.TopPortLib</PackageId>
 		<Authors>CSoft</Authors>
