新增 TestChangeParser 项目及优化事件管理逻辑
- 在 `.gitignore` 中添加对 TestChangeParser 的忽略规则。
- 更新 `Communication.Bluetooth.csproj` 和 `TopPortLib.csproj` 项目版本至 10.0.4。
- 在 `Communication.sln` 中新增 TestChangeParser 项目，并更新解决方案配置。
- 新增 `TestChangeParser.csproj`，目标框架为 `net10.0`。
- 在 `Program.cs` 中添加 TopPort 使用示例程序。
- 优化 `TopPort.cs` 中 `OnReceiveParsedData` 事件的管理逻辑，确保事件订阅安全性。
- 修复 `Parser` 属性切换时的事件订阅处理。

--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,8 @@
 /TestDemo/Server/obj
 /SerialPortTest/bin
 /SerialPortTest/obj
-/TestDemo/SerialPortTest/bin/Debug/net8.0
+/TestDemo/SerialPortTest/bin
 /TestDemo/SerialPortTest/obj
 /TestDemo/SerialPortTest/bin
+/TestDemo/TestChangeParser/bin
+/TestDemo/TestChangeParser/obj
