改进异步支持并添加 ToString 方法
- 为 NamedPipeClient、SerialPort 和 TcpClient 添加 ToString 方法，分别返回 pipeName、PortName 和 hostName:port。
- 重构 SerialPort 的 OpenAsync 和 CloseAsync 方法，避免同步调用异步代码。
- 在 IPhysicalPort 接口中添加 ToString 方法定义。
- 更新 Communication.csproj 的版本号至 10.0.3。

--- a/Communication/Communication.csproj
+++ b/Communication/Communication.csproj
@@ -3,10 +3,10 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net9.0;net10.0</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>10.0.2</Version>
+    <Version>10.0.3</Version>
     <Description>通讯物理口封装</Description>
     <PackageReleaseNotes>
-		更新依赖
+		改进异步支持
 	</PackageReleaseNotes>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageId>CSoft.Communication</PackageId>
