更新版本号并修复异步方法实现问题
更新内容：
- 在 `Communication.Bluetooth.csproj` 和 `TopPortLib.csproj` 中，版本号更新至 `10.0.6`，发布说明更新为“更新依赖”。
- 在 `SerialPort.cs` 中，修复 `OpenAsync` 和 `CloseAsync` 方法的实现，改为调用同步方法并返回已完成的 `Task`。
- 在 `Communication.csproj` 中，版本号更新至 `10.0.4`，发布说明更新为“修复bug”。

--- a/Communication/Communication.csproj
+++ b/Communication/Communication.csproj
@@ -3,10 +3,10 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net9.0;net10.0</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>10.0.3</Version>
+    <Version>10.0.4</Version>
     <Description>通讯物理口封装</Description>
     <PackageReleaseNotes>
-		改进异步支持
+		修复bug
 	</PackageReleaseNotes>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageId>CSoft.Communication</PackageId>
