--- a/Communication/Communication.csproj
+++ b/Communication/Communication.csproj
@@ -3,10 +3,10 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net9.0;net10.0</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>10.0.4</Version>
+    <Version>10.0.5</Version>
     <Description>通讯物理口封装</Description>
     <PackageReleaseNotes>
-		修复bug
+		依赖更新
 	</PackageReleaseNotes>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageId>CSoft.Communication</PackageId>
@@ -23,8 +23,8 @@
 
   <ItemGroup>
     <PackageReference Include="CSoft.LogInterface" Version="10.0.0" />
-    <PackageReference Include="CSoft.Utils" Version="10.0.2" />
-    <PackageReference Include="System.IO.Ports" Version="10.0.1" />
+    <PackageReference Include="CSoft.Utils" Version="10.0.3" />
+    <PackageReference Include="System.IO.Ports" Version="10.0.2" />
   </ItemGroup>
 
   <ItemGroup>
